--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html>
 <head>
     <title>Not Yet A Business</title>
+    <link rel="icon" type="image/x-icon" href="Favicons/icons8-favorite-96.png">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Constants.css">
+    <script type="text/javascript" src="Darklight.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Matemasie&family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
+<div class="button-cont">
+    <button id="theme-switch">click me</button>
+</div>
 <div class="card-container">
     <div class="card">
         <img src="Images/2.jpg">
