--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="button-cont">
-    <button id="theme-switch">click me</button>
+    <button id="theme-switch">darkmode</button>
 </div>
 <div class="card-container">
     <div class="card">
