--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <link rel="icon" type="image/x-icon" href="Favicons/icons8-favorite-96.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="Constants.css">
-    <script type="text/javascript" src="Darklight.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Matemasie&family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
+
 </head>
 <body>
 <div class="button-cont">
-    <button id="theme-switch">darkmode</button>
+    <button type= "button" id="theme-switch"><i class="fa-regular fa-moon" style="justify-content: center; align-content: center; font-size: 50px; color:whitesmoke; background-color:darkslateblue;"></i></button>
 </div>
+<script type="text/javascript" src="Darklight.js"></script>
 <div class="card-container">
     <div class="card">
         <img src="Images/2.jpg">
